<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/holo_blue_light"
     android:orientation="vertical"
    android:layout_gravity="center">

    <SearchView
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </SearchView>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center">
          <TabWidget android:id="@+id/tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
        </TabWidget>
         <TabWidget android:id="@+id/tab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
        </TabWidget>
        
    </LinearLayout>
    
    <LinearLayout 
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

      
       
        <ImageView android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mappoint"
            android:paddingLeft="50dp"/>

        <TextView
            android:id="@+id/searchroute"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/sort_text" />
              
      </LinearLayout>

      <LinearLayout 
          android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
            android:layout_marginStart="10dp">
           <TextView
            android:id="@+id/apt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/apt"
            android:textStyle="bold" />
            <TextView
                android:id="@+id/jobid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jobid"
                android:textStyle="bold" 
                android:paddingLeft="30dp"/>

            <TextView
                android:id="@+id/hold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="80dp"
                android:text="@string/hold"
                android:paddingLeft="100dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress"
                android:textStyle="bold"
                android:singleLine="true" />
        </LinearLayout>

      
    
    
      
      <LinearLayout 
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_gravity="center"
          android:id="@+id/swipe_layout">
         <!--  <com.nucleus.swipemenulistview.SwipeMenuListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />-->
         <ListView 
             
             android:id="@+id/listview"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">
             
         </ListView>
      </LinearLayout>
       <LinearLayout android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_gravity="center">
          <ImageView android:id="@+id/home_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="20dp"
              android:src="@drawable/homeicon"/>
          <ImageView android:id="@+id/msg_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="60dp"
              android:src="@drawable/messageicon"/>
          <ImageView android:id="@+id/rect_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="60dp"
              android:src="@drawable/rectangleicon"/>
          <ImageView android:id="@+id/complaints_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="60dp"
              android:src="@drawable/manicon"/>
          <ImageView android:id="@+id/calender_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="60dp"
             android:src="@drawable/calendericon"/>
          </LinearLayout>.
</LinearLayout>


